telegram and storage service - error passtrought, new apis
